project/test/semantics/bad/input/Bad64_shouldCheckMemberFunctionCallArgumentListsInGenericClasses.ty
singleton class ValueGetter[A, B] {
    
    functions: {
        getValue: (x: A, y: B, z: A) -> Int = 3
    }
}

singleton class GenericTypes {
    
    actions: {
        main: () -> Int = {
            ValueGetter[Int, Bool].getValue(40, 3 > 2, 50 > 40) // MethodArgumentListInvalidError
        }
    }
}
